TMP changes required to build BLE smapel for nrf54h20
Signed-off-by: Piotr Pryga <piotr.pryga@nordicsemi.no>

--- a/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20_cpurad.dts
+++ b/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20_cpurad.dts
@@ -23,6 +23,7 @@
 		zephyr,code-partition = &cpurad_slot0_partition;
 		zephyr,flash = &mram1x;
 		zephyr,sram = &cpurad_ram0;
+		zephyr,entropy = &rng;
 	};
 };
 
@@ -68,7 +69,7 @@
 };
 
 &uart135 {
-	status = "okay";
+	/*status = "okay";*/
 	memory-regions = <&cpurad_dma_region>;
 	current-speed = <115200>;
 	pinctrl-0 = <&uart135_default>;
