--- a/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20-memory_map.dtsi
+++ b/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20-memory_map.dtsi
@@ -174,7 +174,10 @@
 		#size-cells = <1>;
 
 		cpuapp_slot0_partition: partition@a6000 {
-			reg = <0xa6000 DT_SIZE_K(512)>;
+			reg = <0xa6000 DT_SIZE_K(488)>;
+		};
+		storage_partition: partition@120000 {
+			reg = <0x120000 DT_SIZE_K(24)>;
 		};
 
 		cpuppr_code_partition: partition@126000 {
