--- a/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20-memory_map.dtsi
+++ b/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20-memory_map.dtsi
@@ -176,12 +176,24 @@
 		cpuapp_slot0_partition: partition@a6000 {
 			reg = <0xa6000 DT_SIZE_K(488)>;
 		};
-		storage_partition: partition@120000 {
-			reg = <0x120000 DT_SIZE_K(24)>;
-		};
 
-		cpuppr_code_partition: partition@126000 {
-			reg = <0x126000 DT_SIZE_K(64)>;
+		cpuppr_code_partition: partition@120000 {
+			reg = <0x120000 DT_SIZE_K(64)>;
+		};
+	};
+
+	cpuapp_rw_partitions: cpuapp-rw-partitions {
+		compatible = "nordic,owned-partitions", "fixed-partitions";
+		status = "disabled";
+		perm-read;
+		perm-write;
+		perm-secure;
+		#address-cells = <1>;
+		#size-cells = <1>;
+
+		storage_partition: partition@130000 {
+			label = "storage";
+			reg = <0x130000 DT_SIZE_K(24)>;
 		};
 	};
 };
