--- a/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20_cpuapp.dts
+++ b/boards/arm/nrf54h20dk_nrf54h20/nrf54h20dk_nrf54h20_cpuapp.dts
@@ -131,6 +131,10 @@
 	status = "okay";
 };
 
+&cpuapp_rw_partitions {
+	status = "okay";
+};
+
 &cpuppr_vpr {
 	execution-memory = <&cpuppr_code_data>;
 	source-memory = <&cpuppr_code_partition>;
